# OpenScene

./: .gitignore  ACCESSIBILITY.md  ARCHITECTURE.md  Cargo.toml  DESIGN.md  LICENSE  PROGRESS.md  README.md  index.html  package-lock.json  package.json  screenwriter-spec.md  tailwind.config.js  thoroughness-pass.md  tsconfig.json  vite.config.ts
.claude/agents/: commit-message.md  core-verifier.md
.github/workflows/: ci.yml
crates/openscene-core/: Cargo.toml
crates/openscene-core/src/: backup.rs  crdt.rs  fdx.rs  fountain.rs  lib.rs  model.rs  paginate.rs  pdf.rs  safety.rs  snapshots.rs  spell.rs  stats.rs
scripts/: gen-icon.mjs
site/: README.md  next.config.mjs  package-lock.json  package.json
site/app/: globals.css  layout.tsx  page.tsx
site/components/: Download.tsx  Features.tsx  Footer.tsx  Hero.tsx  Marquee.tsx  Nav.tsx  Philosophy.tsx  Reveal.tsx  ScriptDemo.tsx  ThemeSwitcher.tsx  ThemesShowcase.tsx
site/lib/: links.ts  releases.ts  theme.ts
src/: App.tsx  api.ts  appCommands.ts  i18n.ts  main.tsx  store.ts  styles.css  templates.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CommandPalette.tsx  DocumentsSection.tsx  FindReplace.tsx  FormatPanel.tsx  IndexCards.tsx  NoteEditor.tsx  NotesPanel.tsx  RenameDialog.tsx  RevisionsPanel.tsx  SafetyDialogs.tsx  SceneFilter.tsx  SceneNavigator.tsx  SnapshotsPanel.tsx  StartScreen.tsx  StatsPanel.tsx  TableRead.tsx  TitlePageEditor.tsx  Titlebar.tsx  (+1 more)
(+22 files in other folders)
