[package]
name = "openscene"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenScene: free, open-source, offline-first screenwriting"

[lib]
name = "openscene_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
openscene-core = { path = "../crates/openscene-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
